assign transporter, shipped and delivered orders apis
