# adminRoutes/orderRoutes.js
@@ -7,7 +7,10 @@ const {
     getAllPendingOrders,
     getOrderDetails,
     changeOrderStatus,
-    acceptedOrders
+    acceptedOrders,
+    assignTransporter,
+    getShippedOrders,
+    getDeliveredOrders
 } = require("../adminControllers/ordersController.js");
 
 router.route('/pending').get(authenticateAdmin, getAllPendingOrders);
@@ -18,5 +21,10 @@ router.route('/changeorderstatus').post(authenticateAdmin, changeOrderStatus);
 
 router.route('/acceptedorders').get(authenticateAdmin, acceptedOrders);
 
+router.route('/assign/transporter').post(authenticateAdmin, assignTransporter);
+
+router.route('/shippedorders').get(authenticateAdmin, getShippedOrders);
+
+router.route('/deliveredorders').get(authenticateAdmin, getDeliveredOrders);
 
 module.exports = router;
